Kubernetes/K8_ingress/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  # these are replica set labels
  labels:
    purpose: ingress-controller
    project: roboshop
    app: app2
spec:
  replicas: 1
  selector:
    # these labels are used to select pods
    matchLabels:
      purpose: ingress-controller
      project: roboshop
      app: app2
  # pod definition
  template:
    metadata:
      labels:
        # purpose: dp-demo
        purpose: ingress-controller
        project: roboshop
        app: app2
    spec:
      containers:
      - name: app2
        image: krishnamsettyrohith/app2:v1
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec: 
  selector:
    purpose: ingress-controller
    project: roboshop
    app: app2
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  namespace: roboshop
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: your certificate arn
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=roboshop
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: roboshop #group for load balancing to get same response from same lb
spec:
  rules:
    - host: "app2.daws86s.fun"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service: 
              name: app2
              port:
                number: 80
